# medxai

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.md.save  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent_notifier.yml  ci.yml  python-package.yml
examples/: quick_start.ipynb
medxai/: __init__.py  crop_roi.py
medxai/explain/: __init__.py
medxai/inference/: __init__.py
medxai/losses/: __init__.py
medxai/metrics/: __init__.py
medxai/models/: __init__.py  attention_unet.py  attention_unet3d.py  layers.py  ssl.py  ssl_transfer.py  unet.py  unet3d.py
medxai/postprocessing/: __init__.py
medxai/preprocessing/: __init__.py  masked_patch_generator.py
medxai/radiomics/: __init__.py
src/: preprocessing.py
src/medxai/: crop_roi.py
src/tests/: test_preprocessing.py
src/tests/src/commands/: outdated.rs
src/tests/src/commands/src/commands/ithub/workflows/: smoke-test.yml
tests/: test_advanced_features.py  test_crop_roi.py  test_day3_features.py  test_losses.py  test_metrics.py  test_models.py  test_preprocessing.py  test_ssl.py
tools/: train_distributed.py
